Fix search contrast issue

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,6 +1,5 @@
 body {
-  line-height: 1.57; /* Migrate to leading-normal (1.5) */
-  @apply text-body bg-white text-sm antialiased font-normal;
+  @apply text-body bg-white leading-normal text-sm antialiased font-normal;
 }
 
 a {
