--- a/src/css/components/breadcrumbs.css
+++ b/src/css/components/breadcrumbs.css
@@ -1,5 +1,5 @@
 .breadcrumbs {
   li:last-child a {
-    @apply text-body events-none;
+    @apply text-body pointer-events-none;
   }
 }
